[workspace]

[workspace.dependencies]
quasiquote = "=0.0.1"
quote = "1"
syn = "2"
proc-macro2 = "1"

[package]
name = "unwrap-enum"
description = "generate methods to access enum variants"
version = "0.0.2"
edition = "2021"
authors = ["John Turner"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Jturnerusa/unwrap-enum"
homepage = "https://github.com/Jturnerusa/unwrap-enum"
keywords = ["macro", "quote"]

[dependencies]
unwrap-enum-proc-macro = { path = "unwrap-enum-proc-macro" }