[package]
name = "unwrap-enum-proc-macro"
description = "generate methods to access enum variants"
version = "0.1.1"
edition = "2021"
authors = ["John Turner"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Jturnerusa/unwrap-enum"
homepage = "https://github.com/Jturnerusa/unwrap-enum"
keywords = ["macro", "quote"]

[lib]
proc-macro = true

[dependencies]
quasiquote = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }

